--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "@angular/router": "~8.2.14",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "jquery": "^3.6.0",
+    "bootstrap": "4.6.1",
+    "node-sass": "^4.14.1",
+    "primeicons": "1.0.0",
+    "primeng": "7.1.0",
+    "font-awesome": "4.7.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.25",
